--- a/DekuListenerService/.gitignore
+++ b/DekuListenerService/.gitignore
@@ -1,19 +1,41 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
+/target/
+!.mvn/wrapper/maven-wrapper.jar
 
 
-# Created by https://www.gitignore.io/api/sonar,maven,eclipse
-# Edit at https://www.gitignore.io/?templates=sonar,maven,eclipse
+### STS ###
+
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+
+### IntelliJ IDEA ###
+
+.idea
+*.iws
+*.iml
+*.ipr
+
+
+### NetBeans ###
+
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### Other ###
+/main/resources/application.properties
+
+
+# Created by https://www.gitignore.io/api/maven,eclipse
+# Edit at https://www.gitignore.io/?templates=maven,eclipse
 
 ### Eclipse ###
 
@@ -28,7 +50,6 @@ local.properties
 .settings/
 .loadpath
 .recommenders
-servers
 
 # External tool builders
 .externalToolBuilders/
@@ -98,8 +119,4 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
-### Sonar ###
-#Sonar generated dir
-/.sonarlint/
-
-# End of https://www.gitignore.io/api/sonar,maven,eclipse
+# End of https://www.gitignore.io/api/maven,eclipse
